tests/ui/type-alias-impl-trait/issue-52843-closure-constrain.stderr
error: only functions and methods can define opaque types
  --> $DIR/issue-52843-closure-constrain.rs:11:16
   |
LL |     let null = #[define_opaques(Opaque)] || -> Opaque { 0 };
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^

error: concrete type differs from previous defining opaque type use
  --> $DIR/issue-52843-closure-constrain.rs:11:57
   |
LL |     let null = #[define_opaques(Opaque)] || -> Opaque { 0 };
   |                                                         ^ expected `String`, got `i32`
   |
note: previous use here
  --> $DIR/issue-52843-closure-constrain.rs:10:30
   |
LL |     fn _unused() -> Opaque { String::new() }
   |                              ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

